<resources>
    <string name="app_name">DSCE Notify</string>

    <string name="label_name"> <b>Name</b></string>
    <string name="label_usn"> <b>Usn</b></string>
    <string name="label_mail"> <b>Mail Id</b></string>
    <string name="label_num"> <b>Number</b></string>
    <string name="label_department"> <b>Department</b></string>
    <string name="label_sem_sec"> <b>Semester and Section</b></string>
    <string-array name="semester">
        <!--<item>Semester</item>-->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="section">
        <!--<item>Section</item>-->
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>

    </string-array>

    <string-array name="cycle">
        <!--<item>Section</item>-->
        <item>PHYSICS</item>
        <item>CHEMISTRY</item>

    </string-array>

    <string-array name="department">
        <!--<item>Section</item>-->
        <item>FIRST YEAR</item>
        <item>Aeronautical Engineering</item>
        <item>Automobile Engineering</item>
        <item>Bachelor of Architecture</item>
        <item>Biotechnology</item>
        <item>Chemical Engineering</item>
        <item>Civil Engineering</item>
        <item>Computer Science Engineering</item>
        <item>Construction Technology and Management</item>
        <item>Electrical and Electronics Engineering</item>
        <item>Electronics and Communication Engineering</item>
        <item>Industrial Engineering and Management</item>
        <item>Information Science and Engineering</item>
        <item>Electronics and Instrumentation Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Medical-Electronics Engineering</item>
        <item>Telecommunication Engineering</item>

    </string-array>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_news_feed">NewsFeedActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
