<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    tools:context="com.dsce.students.notify.UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/primary_text"
                android:textSize="21sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_below="@+id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp" />


            <android.support.v7.widget.CardView
                android:id="@+id/name_usn_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_image">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/label_usn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        android:text="@string/label_usn"
                        android:textColor="@color/accent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/label_usn"
                        android:background="@color/accent" />


                    <TextView
                        android:id="@+id/user_usn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/label_usn"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/label1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_usn"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        android:text="@string/label_num"
                        android:textColor="@color/accent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/label1"
                        android:background="@color/accent" />

                    <TextView
                        android:id="@+id/user_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/label1"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/label_mail"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_number"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_mail"
                        android:textColor="@color/accent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/label_mail"
                        android:background="@color/accent" />

                    <TextView
                        android:id="@+id/user_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/label_mail"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/label2"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_mail"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_department"
                        android:textColor="@color/accent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/label2"
                        android:background="@color/accent" />

                    <TextView
                        android:id="@+id/user_department"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/label2"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/label3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_department"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_sem_sec"
                        android:textColor="@color/accent"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/label3"
                        android:background="@color/accent" />

                    <TextView
                        android:id="@+id/user_sem_sec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/label3"
                        android:layout_marginTop="6dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
